[project]
name = "helios-launcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "betterproto2-compiler>=0.9.0",
    "betterproto2[all]>=0.9.1",
    "docker>=7.1.0",
    "gitpython>=3.1.46",
    "imgui-bundle>=1.92.600",
    "protobuf>=7.34.0",
    "pyserial>=3.5",
]
